--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,7 +4,7 @@
               target: '_blank',
               title: t('shared.common.forset.motto') %>
   <div class="separator"></div>
-  <%= link_to image_tag('eurasianet.png'),
+  <%= link_to image_tag('eurasianet.svg'),
               "#{I18n.locale == :en ? 'eurasianet.org' : 'http://russian.eurasianet.org/'}",
               target: '_blank',
               title: t('shared.common.eurasianet.motto'), class: 'last' %>
