--- a/app/assets/stylesheets/story.scss.erb
+++ b/app/assets/stylesheets/story.scss.erb
@@ -2,6 +2,7 @@
   @charset 'UTF-8';
 
   @import 'reset';
+
   @import 'components/fonts';
 
   body, html {
@@ -193,6 +194,10 @@ main {
           background-color: rgba(107, 175, 151, 0.5);
           z-index: 1;
         }
+        .pagination {
+          display: none;
+          z-index: 3;
+        }
       }
       .lane {
         background-color: rgba(107, 175, 151, 0.5);
@@ -294,7 +299,7 @@ main {
             }
           }
         }
-        .slideshow {
+        .pagination {
           display: none;
         }
       }
@@ -330,6 +335,7 @@ footer {
     vertical-align: top;
     padding-top: 10px;
     margin: 0 20px;
+    &.last { padding-top: 0; }
   }
   .separator {
     display: inline-block;
@@ -500,14 +506,43 @@ footer {
               margin: 0 190px 0 46px;
             }
           }
-          .slideshow {
+
+        }
+        .poster-container {
+          .pagination {
+            display: flex;
+            flex-direction: column;
+            // margin: 115px 20px 0 0;
+            overflow: hidden;
+            padding: 75px 20px 0 0;
+            height: 100%;
             position: absolute;
+            top: 0;
             right: 0;
-            display: initial;
+            .pagination-container {
+              // position: absolute;
+              // top: 50%;
+              // left: 0;
+              // transform: translateY(-50%);
+              overflow-y: auto;
+              padding-top: 40px;
+              // height: 100%;
+            }
+            a {
+              display: block;
+              border: 3px solid #fff;
+              margin-bottom: 15px;
+            }
+            .current {
+              background-color: #fff;
+              opacity: .6;
+              height: 36px;
+              margin-bottom: 15px;
+            }
           }
         }
       }
+
     }
   }
 }
-
