--- a/app/views/application/_navbar_header.html.erb
+++ b/app/views/application/_navbar_header.html.erb
@@ -40,18 +40,17 @@
       <%= image_tag('close.svg', class: 'close') %>
     </div>
   </div>
+
+
+
   <% if !@is_story_page %>
+  <% title = URI::encode(content_for?(:page_title) ? "#{yield(:page_title)} | #{t("shared.common.name")}" : "#{t("shared.common.name")}".html_safe) %>
     <div class="nav-social">
-      <ul class="nav-social-list"><li class="facebook"><%= link_to image_tag('fb.svg'),
-                "https://facebook.com",
-                target: '_blank',
-                title: t("shared.common.facebook") %></li><li class="twitter"><%= link_to image_tag('twitter.svg'),
-                "https://twitter.com",
-                target: '_blank',
-                title: t('shared.common.twitter') %></li><li class="linkedin"><%= link_to image_tag('linkedin.svg'),
-                "https://linkedin.com",
-                target: '_blank',
-                title: t('shared.common.linkedin') %></li></ul>
+      <ul class="nav-social-list"><li class="facebook"><%= link_to image_tag('fb.svg', alt: t("shared.common.facebook"), title: t("shared.common.facebook")),
+                "https://www.facebook.com/sharer/sharer.php?u=#{root_url}",
+                onclick:"javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"
+                 %></li><li class="twitter"><%= link_to image_tag('twitter.svg', alt: t("shared.common.twitter"), title: t("shared.common.twitter")), "https://twitter.com/share?text=#{title}", onclick:"javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" %>
+                </li><li class="linkedin"><%= link_to image_tag('linkedin.svg', alt: t("shared.common.linkedin"), title: t("shared.common.linkedin")), "https://www.linkedin.com/shareArticle?mini=true&url=#{root_url}&title=#{title}", onclick:"javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" %></li></ul>
       <div class="nav-social-toggle">
         <%= image_tag('share.svg', class: 'share') %>
         <%= image_tag('close.svg', class: 'close') %>
