--- a/app/views/admin/stories/show.html.erb
+++ b/app/views/admin/stories/show.html.erb
@@ -9,7 +9,7 @@ page_title t('shared.common.show_title',
         locals: {
           object: @story,
           index_path: admin_stories_path,
-          show_path: admin_story_path,
+          show_path: story_show_path,
           edit_path: edit_admin_story_path
                 }
   %>
