--- a/app/views/application/_navbar_header.html.erb
+++ b/app/views/application/_navbar_header.html.erb
@@ -35,6 +35,38 @@
         <% end %>
       </ul>
     </div>
+    <% if user_signed_in? %>
+      <ul class="nav-dropdown">
+        <li class="dropdown">
+          <a href="#" id="user-dropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            <%= current_user.email.split("@").first.capitalize %>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
+              <li><%= link_to t('shared.links.stories'), admin_stories_path %></li>
+            <% end %>
+            <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
+              <li><%= link_to t('shared.links.page_contents'), admin_page_contents_path %></li>
+            <% end %>
+            <% if current_user.is?(['super_admin', 'site_admin']) %>
+              <li><%= link_to t('activerecord.models.user', count: 999), admin_users_path %></li>
+            <% end %>
+            <li class='divider'>
+
+            </li>
+            <li>
+              <%= link_to t('.account.edit_profile'),
+                          edit_user_registration_path %>
+            </li>
+            <li>
+              <%= link_to t('.account.logout'),
+                          destroy_user_session_path,
+                          method: :delete %>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    <% end %>
     <div class="nav-toggle">
       <%= image_tag('toggle.svg', class: 'toggle') %>
       <%= image_tag('close.svg', class: 'close') %>
@@ -56,38 +88,5 @@
         <%= image_tag('close.svg', class: 'close') %>
       </div>
     </div>
-  <% end %>
-  <% if user_signed_in? %>
-    <ul class="nav-menu">
-      <li class="dropdown">
-        <a href="#" id="user-dropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-          <%= icon('user')%>
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
-            <li><%= link_to t('shared.links.stories'), admin_stories_path %></li>
-          <% end %>
-          <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
-            <li><%= link_to t('shared.links.page_contents'), admin_page_contents_path %></li>
-          <% end %>
-          <% if current_user.is?(['super_admin', 'site_admin']) %>
-            <li><%= link_to t('activerecord.models.user', count: 999), admin_users_path %></li>
-          <% end %>
-          <li class='divider'>
-
-          </li>
-          <li>
-            <%= link_to t('.account.edit_profile'),
-                        edit_user_registration_path %>
-          </li>
-          <li>
-            <%= link_to t('.account.logout'),
-                        destroy_user_session_path,
-                        method: :delete %>
-          </li>
-        </ul>
-      </li>
-    </ul>
   <% end %>
 </nav>
