--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,45 +1,39 @@
 <% page_title t 'shared.common.name' %>
 
 <ul class="grid">
+  <% ln = @stories.length %>
   <%- @stories.sorted.each_with_index do |story, story_i| %>
     <% story_classes =  [] %>
     <% story_classes << 'cs' unless story.is_published? %>
     <% story_classes << 'w' if story.is_wide? %>
     <% story_classes << 'vt' if story_i >= 6 # last 6 vertical-align -> top%>
-    <% story_classes << 'wm' if story_i == 5 # story poster 6 and 12 without right margin %>
+    <% story_classes << 'wm' if story_i == 5 || story_i == 11 # story poster 6 and 12 without right margin %>
 
     <li class="<%= story_classes.join(' ') %>">
-      <div class="story-container">
+      <div class="story-container<%= story_i+1 == ln ? ' about-eurasianet' : '' %>">
         <div class="story-poster">
           <%= image_tag story.image_homepage %>
         </div>
         <div class="story-info">
-            <% if story.is_published? %>
-              <%= link_to story_show_path(story), class: 'story-link' do %>
+          <% if story.is_published? %>
+            <%= link_to story_show_path(story), class: 'story-link' do %>
+              <% if story_i + 1 == ln %>
+                <span><%= story.title.upcase %></span>
+                <%= image_tag "arrow.svg", width: "20px", height: "20px" %>
+              <% else %>
                 <div class="story-title"><%= story.title %></div>
                 <div class="story-explore"><%= t('shared.common.explore') %></div>
                 <div class="story-author"><%= story.author  %></div>
               <% end %>
-            <% else %>
-              <div class="story-notice">
-                <span class="story-soon"><%= t('.coming_soon') %></span>
-                <span class="story-title"><%= story.title %></span>
-              </div>
             <% end %>
+          <% else %>
+            <div class="story-notice">
+              <span class="story-soon"><%= t('.coming_soon') %></span>
+              <span class="story-title"><%= story.title %></span>
+            </div>
+          <% end %>
         </div>
       </div>
     </li>
   <% end %>
-  <li class="vt wm">
-    <div class="story-container about-eurasianet">
-      <div class="story-poster">
-        <%= image_tag "eurasianet_poster.jpg" %>
-      </div>
-      <div class="story-info">
-        <%= link_to about_eurasianet_path, class: 'story-link' do %>
-          <span><%= @about_eurasianet.title.upcase %></span>
-          <%= image_tag "arrow.svg", width: "20px", height: "20px" %>
-        <% end %>
-      </div>
-  </li>
 </ul>
