Russian translation added

--- a/app/views/application/_navbar_header.html.erb
+++ b/app/views/application/_navbar_header.html.erb
@@ -68,7 +68,7 @@
       </ul>
     <% end %>
     <div class="nav-toggle">
-      <%= image_tag('toggle.svg', class: 'toggle') %>
+      <%= image_tag('toggle.svg', class: 'toggle', ) %>
       <%= image_tag('close.svg', class: 'close') %>
     </div>
   </div>
