--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -8,7 +8,7 @@
 <div class="aside">
   <div class="col">
     <div class="about"><span><%= @about.title %></span><%= image_tag("blue_arrow.png") %></div>
-    <% AboutImage.only_left.sorted.each{|img| %>
+    <% @images.only_left.each{|img| %>
       <%
         img_cap = []
         img_cap << t('.image_caption', cap: img.image_caption) if img.image_caption.present?
@@ -21,7 +21,7 @@
     <% } %>
   </div>
   <div class="col">
-    <% AboutImage.only_right.sorted.each{|img| %>
+    <% @images.only_right.each {|img| %>
       <%
         img_cap = []
         img_cap << t('.image_caption', cap: img.image_caption) if img.image_caption.present?
