do not show story show admin page

--- a/app/views/admin/stories/index.html.erb
+++ b/app/views/admin/stories/index.html.erb
@@ -32,6 +32,7 @@
         <td>
           <%= link_to t('shared.actions.view'),
                       story_show_path(story),
+                      target: :blank,
                       class: 'btn btn-default' %>
         </td>
 
