--- a/app/views/shared/_story_show.html.erb
+++ b/app/views/shared/_story_show.html.erb
@@ -11,27 +11,29 @@
         <div class="poster" style="background: url(<%= @story.image_story.url %>) top/cover no-repeat;" title="<%= t('.poster_title')%>"></div>
       <% end %>
       <div class="bg"></div>
-      <div class="pagination">
-        <div class="pagination-container">
-          <% if @prev.present? %>
-            <% @prev.each {|st| %>
-              <%= link_to story_show_path(st), class: 'prev', title: st.title do %>
-                <%= image_tag(st.image_story.url(:pagination), alt: st.title) %>
-              <% end %>
-            <% } %>
-          <% end %>
-          <% if @prev.present? || @next.present? %>
-            <div class="current"></div>
-          <% end %>
-          <% if @next.present? %>
-            <% @next.each {|st| %>
-              <%= link_to story_show_path(st), class: 'next', title: st.title do %>
-                <%= image_tag(st.image_story.url(:pagination), alt: st.title) %>
-              <% end %>
-            <% } %>
-          <% end %>
+      <% if @story.slug != 'about-eurasianetorg' %>
+        <div class="pagination">
+          <div class="pagination-container">
+            <% if @prev.present? %>
+              <% @prev.each {|st| %>
+                <%= link_to story_show_path(st), class: 'prev', title: st.title do %>
+                  <%= image_tag(st.image_story.url(:pagination), alt: st.title) %>
+                <% end %>
+              <% } %>
+            <% end %>
+            <% if @prev.present? || @next.present? %>
+              <div class="current"></div>
+            <% end %>
+            <% if @next.present? %>
+              <% @next.each {|st| %>
+                <%= link_to story_show_path(st), class: 'next', title: st.title do %>
+                  <%= image_tag(st.image_story.url(:pagination), alt: st.title) %>
+                <% end %>
+              <% } %>
+            <% end %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
     <div class="lane">
       <div class="card">
@@ -45,7 +47,6 @@
           </div>
 
           <div class="col col-fill">
-
             <div class="image-caption"><%= img_cap.join(' ') %></div>
           </div>
           <% title = URI::encode(content_for?(:page_title) ? "#{yield(:page_title)} | #{t("shared.common.name")}" : "#{t("shared.common.name")}".html_safe) %>
