--- a/app/views/admin/stories/index.html.erb
+++ b/app/views/admin/stories/index.html.erb
@@ -50,7 +50,7 @@
 
           <%= if can? :destroy, story
                 link_to t('shared.actions.destroy'),
-                        story_show_path(story),
+                        admin_story_path(story),
                         method: :delete,
                         data: { confirm: t('shared.prompts.confirm') },
                         class: 'btn btn-danger'
