Mobile style fixes

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -293,6 +293,7 @@ main {
 
             height: 100%;
             justify-content: center;
+            pointer-events: all;
             img {
               opacity: 0;
               margin: 15px auto 20px;
