--- a/app/assets/stylesheets/story.scss.erb
+++ b/app/assets/stylesheets/story.scss.erb
@@ -190,6 +190,7 @@ main {
           display: initial;
         }
         .poster {
+          display: inline-block;
           position: relative;
           width: 100%;
           height: 100%;
@@ -268,6 +269,7 @@ main {
             display: flex;
             flex-direction: row;
             position: absolute;
+            top: 0;
             right: 0;
             .social-list {
               display: none;
@@ -334,7 +336,7 @@ footer {
   padding: 10px 0 0;
   text-align: right;
   width: 100%;
-  height: 60px;
+  // height: 60px;
   background-color: #fff;
   a {
     display: inline-block;
