--- a/app/assets/stylesheets/story.scss.erb
+++ b/app/assets/stylesheets/story.scss.erb
@@ -188,6 +188,8 @@ main {
         flex: 1;
         a {
           display: initial;
+          width: 100%;
+          height: 100%;
         }
         .poster {
           display: inline-block;
