Ios issue fixed, feedback updates

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -304,7 +304,7 @@ main {
       &:not(.cs) .story-container {
         cursor: pointer;
       }
-      &:not(.cs) .story-container:hover, &:not(.cs) .story-container.hover {
+      /* &:not(.cs) .story-container:hover, */ &:not(.cs) .story-container.hover {
         .story-info {
           opacity: 1;
           .story-link {
@@ -354,7 +354,7 @@ main {
         .story-container {
           cursor: default;
         }
-        .story-container:hover, .story-container.hover {
+        /* .story-container:hover, */ .story-container.hover {
           .story-info {
             background-color: rgba(245, 206, 32, 0.6);
           }
@@ -542,7 +542,7 @@ footer {
         .story-link {
           pointer-events: all;
         }
-        &:not(.cs) .story-container:hover, &:not(.cs) .story-container.hover {
+        /* &:not(.cs) .story-container:hover, */ &:not(.cs) .story-container.hover {
           .story-info {
             .story-title {
               font: 20px caviar_dreams_b;
@@ -551,7 +551,7 @@ footer {
           }
         }
         &.cs {
-          .story-container:hover, .story-container.hover {
+          /* .story-container:hover, */ .story-container.hover {
             .story-title {
               font: 18px caviar_dreams_b;
             }
