--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -247,6 +247,8 @@ main {
           position: absolute;
           top: 50%;
           left: 50%;
+          -ms-transform: translate( -50%, -50%);
+          -webkit-transform: translate( -50%, -50%);
           transform: translate( -50%, -50%);
           width: 116px;
           height: 116px;
@@ -257,6 +259,8 @@ main {
             position: absolute;
             top: 50%;
             left: 50%;
+            -ms-transform: translate( -50%, -50%);
+            -webkit-transform: translate( -50%, -50%);
             transform: translate( -50%, -50%);
             font: 14px caviar_dreams_b;
             color: #f3ede4;
@@ -371,6 +375,8 @@ main {
             position: absolute;
             top: 50%;
             left: 50%;
+            -ms-transform: translate( -50%, -50%);
+            -webkit-transform: translate( -50%, -50%);
             transform: translate( -50%, -50%);
             font: 18px caviar_dreams_b;
             color: #f3ede4;
