--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -31,7 +31,49 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'components/translated_inputs';
 
 .actions-container {
-  background-color: #f9f9f9;
+  // background-color: #f9f9f9;
   padding: 10px;
   margin: 20px 0px;
+}
+.actions {
+  background-color: transparent;
+}
+a.btn-primary, a.btn-danger {
+  color: #fff !important;
+}
+table th {
+  font: 16px caviar_dreams_b !important;
+}
+.btn:hover {
+  box-shadow: none;
+}
+table td, .btn {
+  font: 16px caviar_dreams_r !important;
+  vertical-align: middle !important;
+}
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #f7e9d5;
+}
+.table-hover > tbody > tr:hover {
+  background-color: #f5e0c3;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: caviar_dreams_b !important;
+  padding: 6px 0 10px !important;
+}
+h1 { font-size: 24px !important; }
+h2 { font-size: 22px !important; }
+h3 { font-size: 21px !important; }
+h4 { font-size: 20px !important; }
+h5 { font-size: 19px !important; }
+h6 { font-size: 18px !important; }
+.formtastic .boolean label {
+  padding: 0;
+}
+.formtastic .control-label {
+  font-family: caviar_dreams_r !important;
+  margin-left: 3px !important;
+}
+.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
+  position: static !important;
 }
