Nav style fixes

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -84,7 +84,7 @@ nav {
     }
   }
   .nav-motto {
-    padding: 15px 0 0;
+    padding: 15px 0 0 10px;
     font: 16px caviar_dreams_b;
     color: #613f20;
   }
@@ -106,14 +106,14 @@ nav {
           margin-top: 2px;
           a {
             font: 16px playfair_display_r;
-            color: #cd9732;
+            color: #8c5f0c;
             &.active {
               font: 16px playfair_display_b;
             }
           }
           &.nav-lang-separator {
             font: 16px playfair_display_r;
-            color: #cd9732;
+            color: #8c5f0c;
           }
         }
       }
@@ -124,7 +124,7 @@ nav {
       .close { display: none; }
     }
     &.active {
-      background-color: rgba(247, 206, 19, .7);
+      background-color: rgba(247, 206, 19, .9);
       .nav-lang-list {
         display: initial;
       }
