--- a/app/assets/stylesheets/story.scss.erb
+++ b/app/assets/stylesheets/story.scss.erb
@@ -108,14 +108,14 @@ nav {
           margin-top: 2px;
           a {
             font: 16px playfair_display_r;
-            color: #cd9732;
+            color: #8c5f0c;
             &.active {
               font: 16px playfair_display_b;
             }
           }
           &.nav-lang-separator {
             font: 16px playfair_display_r;
-            color: #cd9732;
+            color: #8c5f0c;
           }
         }
       }
@@ -126,7 +126,7 @@ nav {
       .close { display: none; }
     }
     &.active {
-      background-color: rgba(247, 206, 19, .7);
+      background-color: rgba(247, 206, 19, .9);
       .nav-lang-list {
         display: initial;
       }
@@ -173,7 +173,7 @@ main {
     .motto {
       font: 16px caviar_dreams_b;
       color: #613f20;
-      padding: 16px 0 16px 6px;
+      padding: 16px 0 16px 10px;
     }
     .aside {
       display: flex;
