--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -15,7 +15,7 @@
   }
   body {
     // position: relative;
-    margin: 0 0 60px;
+    margin: 0 0 80px;
     background-color: #fff3de;
     background: transparent url("<%= asset_path('bg.jpg') %>") no-repeat;
     background-size: cover;
@@ -216,7 +216,6 @@ main {
   .grid {
     // overflow-x: auto;
     list-style: none;
-    width: 390px;
     margin: 0 auto;
     font-size: 0;
     li {
@@ -224,17 +223,13 @@ main {
       vertical-align: top;
       margin-bottom: 10px;
       font-size: 18px;
-      &:nth-of-type(1), &:nth-of-type(4), &:nth-of-type(6), &:nth-of-type(8), &:nth-of-type(11) {
-        .story-container {
-          margin-right: 10px;
-        }
-      }
+      width: 100%;
       .story-container {
         position: relative;
       }
       .story-poster {
         img {
-          min-width: 100%;
+          width: 100%;
           vertical-align: top;
         }
       }
@@ -399,7 +394,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 80px;
   a {
     display: inline-block;
     font-size: 0;
@@ -417,6 +412,27 @@ footer {
     vertical-align: top;
   }
 }
+@media only screen and (min-width : 480px) {
+  main {
+    .grid {
+      width: 390px;
+      li {
+        width: auto;
+        &:nth-of-type(1), &:nth-of-type(4), &:nth-of-type(6), &:nth-of-type(8), &:nth-of-type(11) {
+          .story-container {
+            margin-right: 10px;
+          }
+        }
+        .story-poster {
+          img {
+            min-width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (min-width : 768px) {
   nav {
     display: flex;
