--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -7,7 +7,7 @@
 %>
 <div class="aside">
   <div class="col">
-    <div class="about"><span><%= @about.title %></span><%= image_tag("blue_arrow.png") %></div>
+    <div class="about"><span><%= @about.title %></span></div>
     <% @images.only_left.each{|img| %>
       <%
         img_cap = []
