update homepage css to get rid of horz scroll

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -210,9 +210,9 @@ nav {
 main {
   padding: 0 8px;
   .container {
-    overflow-x: auto;
+/*    overflow-x: auto;
     overflow-y: hidden;
-  }
+*/  }
   .grid {
     // overflow-x: auto;
     list-style: none;
@@ -547,7 +547,7 @@ footer {
       // overflow-x: auto;
       // list-style: none;
       width: 99.9%;
-      min-width: 1390px;
+      min-width: 769px;
       max-width: 1920px;
       // margin: 0 auto;
       // font-size: 0;
