add about text to home page

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -387,6 +387,21 @@ main {
       }
     }
   }
+
+  .about-site{
+    position: inherit;
+    bottom: inherit;
+    left: inherit;
+    padding: 10px 30px 30px;
+    width: inherit;
+    font-family: playfair_display_r;
+    font-size: 14px;
+    color: #613f20;
+    line-height: 1.3;
+    span{
+      color: rgb(235, 72, 72);
+    }
+  }
 }
 footer {
   padding: 10px 0 0;
@@ -589,6 +604,13 @@ footer {
           }
         }
       }
+    }
+    .about-site{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 10px 30px;
+      width: 50%;
     }
   }
 }
