--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -13,7 +13,7 @@
     position: relative;
     min-height: 100%;
   }
-  body {
+/*  body {
     // position: relative;
     margin: 0 0 80px;
     background-color: #fff3de;
@@ -21,6 +21,33 @@
     background-size: cover;
     background-attachment: fixed;
   }
+  fix for background fix on ios from here:
+  https://stackoverflow.com/questions/24154666/background-size-cover-not-working-on-ios/43058483#43058483;
+*/  body {
+    margin: 0 0 80px;
+    background-color: #fff3de;
+    background: transparent url("<%= asset_path('bg.jpg') %>") no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  body:after{
+    content:"";
+    position:fixed; /* stretch a fixed position to the whole screen */
+    top:0;
+    height:100vh; /* fix for mobile browser address bar appearing disappearing */
+    left:0;
+    right:0;
+    z-index:-1; /* needed to keep in the background */
+    background: transparent url("<%= asset_path('bg.jpg') %>");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
   * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
